package chching.command;

import chching.Storage;
import chching.Ui;
import chching.currency.Converter;
import chching.currency.Selector;
import chching.record.Income;
import chching.record.IncomeList;
import chching.record.Expense;
import chching.record.ExpenseList;
import chching.record.TargetStorage;

/**
 * model a class to handle the find command. inherit from Command class.
 */
public class FindCommand extends Command {
    private final String category;
    private final String keyword;

    public FindCommand(String category, String keyword) {
        this.category = category;
        this.keyword = keyword;
    }

    /**
     * Executes the find command
     *
     * @param incomes       ArrayList of income.
     * @param expenses      ArrayList of income.
     * @param ui        User interface
     * @param storage       Storage of data
     * @param converter     Convert value
     * @param targetStorage store target
     */
    @Override
    public void execute(IncomeList incomes, ExpenseList expenses, Ui ui, Storage storage, Selector selector,
                              Converter converter, TargetStorage targetStorage) {

        IncomeList incomesMatched = new IncomeList();
        ExpenseList expensesMatched = new ExpenseList();

        if (category == "income") {
            for (int i = 0; i < incomes.size(); i++) {
                Income income = incomes.get(i);
                if (income.toString().contains(keyword)) {
                    incomesMatched.addRecord(income);
                }
            }
            ui.showMatchedRecord(incomesMatched);

        } else {
            for (int i = 0; i < expenses.size(); i++) {
                Expense expense = expenses.get(i);
                if (expense.toString().contains(keyword)) {
                    expensesMatched.addRecord(expense);
                }
            }
            ui.showMatchedRecord(expensesMatched);
        }
    }

}
