package seedu.duke.command;

import seedu.duke.Workout;

import java.util.ArrayList;

public class ListCommand {

    public static void printList(String input, ArrayList<Workout> workoutInput){


    }
}